[gd_scene load_steps=2 format=3 uid="uid://c42gosme6f748"]

[ext_resource type="Script" path="res://main_menu_page/workout_page/workoutResultPage/exercise_result_display/set_display.gd" id="1_dq0ym"]

[node name="ExerciseDoneDisplay" type="HBoxContainer"]
script = ExtResource("1_dq0ym")

[node name="SetLabel" type="Label" parent="."]
unique_name_in_owner = true
layout_mode = 2
text = "Set 1 "

[node name="ProgressBar" type="ProgressBar" parent="."]
unique_name_in_owner = true
custom_minimum_size = Vector2(300, 20)
layout_mode = 2
step = 1.0
show_percentage = false

[node name="ProgressLabel" type="Label" parent="ProgressBar"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
